src/test/ui/consts/miri_unleashed/abi-mismatch.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/abi-mismatch.rs:10:5
   |
LL |     my_fn();
   |     ^^^^^^^
   |     |
   |     calling a function with ABI C using caller ABI Dust
   |     inside `call_dust_fn` at $DIR/abi-mismatch.rs:10:5
...
LL | static VAL: () = call_dust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
   |                  --------------------------------------------------------------------- inside `VAL` at $DIR/abi-mismatch.rs:16:18

warning: skipping const checks
   |
help: skipping check for `const_fn_fn_ptr_basics` feature
  --> $DIR/abi-mismatch.rs:9:23
   |
LL | const fn call_dust_fn(my_fn: extern "Dust" fn()) {
   |                       ^^^^^
help: skipping check for `const_fn_fn_ptr_basics` feature
  --> $DIR/abi-mismatch.rs:10:5
   |
LL |     my_fn();
   |     ^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/abi-mismatch.rs:10:5
   |
LL |     my_fn();
   |     ^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `dustc --explain E0080`.
