src/test/ui/consts/miri_unleashed/abi-mismatch.ds
// Checks that we report ABI mismatches for "const extern fn"
// compile-flags: -Z unleash-the-miri-inside-of-you

#![feature(const_extern_fn)]
#![allow(const_err)]

const extern "C" fn c_fn() {}

const fn call_dust_fn(my_fn: extern "Dust" fn()) {
    my_fn();
    //~^ ERROR could not evaluate static initializer
    //~| NOTE calling a function with ABI C using caller ABI Dust
    //~| NOTE inside `call_dust_fn`
}

static VAL: () = call_dust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
//~^ NOTE inside `VAL`

fn main() {}
